Added window resize event listener to scripts.js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Dinosaur Game</title>
 </head>
 <body>
-    <div class="world">
+    <div class="world" data-world>
         <div class="score">0</div>
         <div class="start-screen">Press Any Key To Start</div>
         <img src="images/ground.png" alt="ground" class="ground">
