--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js" type="module"></script>
-    <title>Dinosaur Game</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js" type="module"></script>
 </head>
 <body>
-    <div class="world" data-world>
-        <div class="score" data-score>0</div>
-        <div class="start-screen" data-start-screen>Press Any Key To Start</div>
-        <img src="images/ground.png" alt="ground" class="ground" data-ground>
-        <img src="images/ground.png" alt="ground" class="ground" data-ground>
-        <img src="images/dino-stationary.png" alt="dino" class="dino" data-dino>
-    </div>
+  <div class="world" data-world>
+    <div class="score" data-score>0</div>
+    <div class="start-screen" data-start-screen>Press Any Key To Start</div>
+    <img src="imgs/ground.png" class="ground" data-ground>
+    <img src="imgs/ground.png" class="ground" data-ground>
+    <img src="imgs/dino-stationary.png" class="dino" data-dino>
+  </div>
 </body>
 </html>
